Fix overflow in BS5 when frozen and grouping

--- a/css/ui.jqgrid-bootstrap5.css
+++ b/css/ui.jqgrid-bootstrap5.css
@@ -1319,5 +1319,8 @@ a.colmenu .colmenuspan
 	overflow: auto;
 	height: 17em;
 }
+.frozen-bdiv [class*="ghead_"] td {
+    overflow-x: hidden;
+}
 /*uncomment  this if you use ie11*/
 /* <script>window.MSInputMethodContext && document.documentMode && document.write('<script src="https://cdn.jsdelivr.net/gh/nuxodin/ie11CustomProperties@4.1.0/ie11CustomProperties.min.js"><\/script>');</script>*/
